# taggerXML

./: .editorconfig  .gitmodules  CMakeLists.txt  install.sh
src/: CMakeLists.txt  XMLtext.cpp  XMLtext.h  argopt.cpp  argopt.h  bool.h  contextual-rule-learn.cpp  darray.h  defines.h  field.cpp  field.h  fix-kbest-rule-learn.cpp  fst.cpp  fst.h  kbest-contextual-rule-learn.cpp  lex.cpp  lex.h  main.cpp  mygets.cpp  mygets.h  newregistry.h  option.cpp  option.h  readcorpus.cpp  readcorpus.h  registry.h  sst.cpp  sst.h  substring.cpp  substring.h  sysdep.h  tagger.cpp  tagger.h  text.cpp  text.h  useful.cpp  useful.h  word.cpp  word.h  writcorp.h
